# cobol-reporter

./: README.md  output.md  pyproject.toml  results.jsonlines
cobol_reporter/: json_to_markdown.py  openpipe_tuner.py  rag.py
storage/: docstore.json  index_store.json
