[tool.poetry]
name = "cobol-reporter"
version = "0.1.0"
description = "ai for understanding COBOL code"
authors = ["keppy <keppy.rb@gmail.com>"]
license = "none"
readme = "README.md"
packages = [{ include = "cobol_reporter" }]

[tool.poetry.dependencies]
python = "^3.12"
instructor = "^1.3.3"
openpipe = "^4.16.0"
pydantic = "^2.7.4"
transformers = "^4.41.2"
datasets = "^2.20.0"
evaluate = "^0.4.2"
accelerate = "^0.31.0"
torch = "^2.3.1"
asyncio = "^3.4.3"
llama-index = "^0.10.47"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"